<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitName"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitNameHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitColor"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitColorHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitWeight"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitWeightHint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitDelicious"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitDelicious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitDeliciousHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitCreateDate"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitCreateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitCreateDateHint"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddFruitUpdateDate"
        android:layout_width="match_parent"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etAddFruitUpdateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAddFruitUpdateDateHint"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCreateFruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_create_fruit_text" />

</LinearLayout>